--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,26 @@
+# Core Data Processing
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.2.0
+
 # Deep Learning
 torch>=2.0.0
 transformers>=4.30.0
+tokenizers>=0.13.0
+
+# Text Processing
+beautifulsoup4>=4.12.0
+regex>=2023.0.0
+emoji>=2.2.0
+langdetect>=1.0.9
+
+# Progress and Utilities
+tqdm>=4.65.0
+
+# Evaluation
 evaluate>=0.4.0
 datasets>=2.12.0
 
-# Data Processing
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.2.0
-
-# Text Cleaning
-beautifulsoup4>=4.12.0
-
-# Progress Bars
-tqdm>=4.65.0
-
-# HTML Parsing for text cleaning
-beautifulsoup4>=4.12.0
-
-
+# Visualization (optional)
+matplotlib>=3.7.0
+seaborn>=0.12.0
