--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,15 @@ scikit-learn>=1.2.0
 torch>=2.0.0
 transformers>=4.30.0
 tokenizers>=0.13.0
+accelerate>=0.26.0
 
 # Text Processing
 beautifulsoup4>=4.12.0
 regex>=2023.0.0
 emoji>=2.2.0
 langdetect>=1.0.9
+nltk>=3.8.1
+wordcloud>=1.9.0
 
 # Progress and Utilities
 tqdm>=4.65.0
@@ -21,6 +24,7 @@ tqdm>=4.65.0
 evaluate>=0.4.0
 datasets>=2.12.0
 
-# Visualization (optional)
+# Visualization
 matplotlib>=3.7.0
 seaborn>=0.12.0
+plotly>=5.15.0
